--- a/[프로그래머스] 문자열 다루기 기본.md
+++ b/[프로그래머스] 문자열 다루기 기본.md
@@ -2,8 +2,9 @@
 
 * 문제 설명 : 문자열 s의 길이가 4 혹은 6이고, 숫자로만 구성돼있는지 확인해주는 함수, solution을 완성하세요. 예를 들어 s가 a234이면 False를 리턴하고 1234라면 True를 리턴하면 됩니다.
 * 제한 사항 : s는 길이 1 이상, 길이 8 이하인 문자열입니다.
+<br/><br/>
 
-## 풀이 1 : Exception
+### 풀이 1 : Exception
 ```java
 class Solution {
     public boolean solution(String s) {
@@ -20,8 +21,9 @@ class Solution {
 }
 ```
 이렇게 풀고 다른 풀이 방법을 찾아보다가, [스택오버플로우](https://stackoverflow.com/questions/1102891/how-to-check-if-a-string-is-numeric-in-java)에서 이 방법은 함수 호출이 많고 예외 발생이 잦을 것으로 추정돼 성능이 좋지 않다는 글을 봤다. 정말 다양하고 성능 좋은 풀이 방법이 나와 있다. 프로그래밍 세계의 공유 문화는 정말 아름답고 아름답다. :hugs: 덕분에 많이 배운다.
+<br/><br/>
 
-## 풀이 2 : isDigit()
+### 풀이 2 : isDigit()
 ```java
 class Solution {
     public boolean solution(String s) {
@@ -41,8 +43,9 @@ class Solution {
 }
 ```
 이 풀이는 java.lang.Character.isDigit() 메소드를 이용하는데, IDE에서는 되지만 프로그래머스에서는 임포트가 안 되는지 오류가 난다. 아쉽군.
+<br/><br/>
 
-## 풀이 3 : 정규식
+### 풀이 3 : 정규식
 정규식을 이용하는 방법이 성능이 떨어지지 않으면서도 받아들여지는 정석적인 풀이인 것 같다. 정규식 공부를 마저 하고 수정해야겠다.
 
 
